# boardconnect-server

./: Cargo.toml  README.md
migrations/2020-01-12-093249_create_users/: up.sql
migrations/2020-01-12-093249_users/: up.sql
migrations/2020-01-13-152339_create_circles/: down.sql  up.sql
src/: app.rs  controller.rs  main.rs  models.rs  routes.rs  schema.rs  services.rs
src/app/: data.rs
src/controller/: test.rs
src/controller/auth/: mod.rs
src/controller/game/: mod.rs  search.rs
src/controller/utils/response/: error.rs
src/enums/: content_type.rs
src/middlewares/: logger.rs
src/routes/: index.rs
src/services/: test.rs
src/utils/: time.rs
