[package]
name = "board_connect_server"
version = "0.1.0"
authors = ["Kim Bum June <bjbj6363@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time = "*"
actix-rt = "1.0.0"
actix-web = "2.0.0"
actix-files = "0.2.1"
actix-session = "0.3.0"
actix-utils = "1.0.3"
env_logger="0.7.1"
dotenv = "0.9.0"
diesel = { version = "1.0.0", features = ["mysql"] }